# flow

./: .gitignore  Cargo.toml  README.md  client.bat
boot/: Cargo.toml
boot/src/: bootstrap_node.rs  main.rs
docs/: format.md
node/: Cargo.toml
node/src/: main.rs  node.rs
src/: info.rs  main.rs  send.rs  trafic.rs  util.rs  utils.rs
