[package]
name = "flow-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.42.1", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.16.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
env_logger = "0.9.0"